# sh_sfp

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
include/sh_sfp/: SoundFileManager.hpp  audio_translator_bar_graph.hpp  audio_translator_i.hpp  audio_visualizer_ascii.hpp  audio_visualizer_bar_graph_i.hpp  audio_visualizer_i.hpp  sound_file_playback.hpp
include/smart_home_scc/: ScreenColorPeaksManager.hpp
include/smart_home_sfp/: SoundFileManager.hpp  SoundHelpers.hpp
launch/: color_peaks.launch  sf_analyzer.launch  sh_sfp_managers.launch.py
scripts/: audio_analyzer.py  audio_downloader.py
src/: SoundFileManager.cpp  audio_translator_bar_graph.cpp  audio_translator_i.cpp  audio_visualizer_ascii.cpp  audio_visualizer_bar_graph_i.cpp  audio_visualizer_i.cpp  sound_file_playback.cpp
src/lib/: ScreenColorPeaksManager.cpp  SoundFileManager.cpp  SoundHelpers.cpp
src/nodes/: ScreenColorPeaksNode.cpp  SoundFileHandlerNode.cpp
