<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>sh_sfp</name>
    <version>0.0.0</version>
    <description>The audio analysis controllers for the smart home.</description>
    <maintainer email="rnvandemark@gmail.com">R. Nick Vandemark</maintainer>
    <license>BSD</license>
    <author email="rnvandemark@gmail.com">R. Nick Vandemark</author>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <build_depend>rclcpp</build_depend>
    <build_depend>rclpy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sh_common_interfaces</build_depend>
    <build_depend>sh_sfp_interfaces</build_depend>

    <exec_depend>rclcpp</exec_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sh_common_interfaces</exec_depend>
    <exec_depend>sh_sfp_interfaces</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
